--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,7 @@ h6 {
   width: 100%;
   overflow: hidden;
   transition: 0.3s;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
 
 .nav-menu a i,
@@ -202,6 +203,7 @@ h6 {
   color: #45505b;
 }
 
+/*
 @media (min-width: 992px) {
 
   .nav-menu a,
@@ -215,6 +217,7 @@ h6 {
     color: #fff;
   }
 }
+*/
 
 .nav-menu a:hover,
 .nav-menu .active,
