--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,11 +146,13 @@ h6 {
   }
 }
 
+/*
 @media (min-width: 991px) {
   #main {
     margin-left: 100px;
   }
 }
+*/
 
 /*--------------------------------------------------------------
 # Navigation Menu
